@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Apr-28-2010 patrick     Changed window/mouse interaction on Mac OS X.
+                        NEW VERSION: 1.3.29
 Mar-25-2010 patrick     Changed window/mouse interaction on Windows.
                         NEW VERSION: 1.3.28
 Feb-13-2010 patrick     Fixed mouse lock state tracking in input areas. The
